--- a/src/verifier-offchain/.env.example
+++ b/src/verifier-offchain/.env.example
@@ -1,8 +1,7 @@
 # RPC endpoint (BlockDAG / Ethereum compatible)
-RPC_URL=https://YOUR-BLOCKDAG-RPC
+RPC_URL=https://BLOCKDAG-RPC
 
 # Private key for the EVM account that will submit proofs
-# WARNING: Don't commit real private keys into the repo.
 SUBMITTER_PRIVATE_KEY=0xabc123...
 
 # Deployed verifier contract address
