--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -46,6 +46,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Upload GitHub Pages artifact        
+        uses: actions/upload-pages-artifact@v3        
+          with:
+            path: ./docs
+            
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
